# annoying_email_sender

./: .gitignore  README.md  aggregate.py  config.yaml  helpers.py  html_to_md_runner.py  main.py  pyproject.toml  render_report.py  send_email.py
.github/workflows/: daily.yml  weekly.yml  weekly_jobs.yml
docs/: 2026-04-03.html  2026-04-06.html  2026-04-13.html  2026-04-20.html  2026-04-27.html  2026-05-04.html  2026-05-11.html  2026-05-18.html  2026-05-25.html  2026-06-01.html  2026-06-08.html  2026-06-15.html  2026-06-22.html  2026-06-29.html  feed.xml  index.html
outputs/: history.json
src/jobs_tracker/: __main__.py  main.py  models.py
src/jobs_tracker/delivery/: email_sender.py
src/jobs_tracker/ingest/: base.py  bis.py  ecb.py  eib.py  novartis.py  roche.py  sandoz.py
src/jobs_tracker/render/: digest_html.py  digest_md.py  site_builder.py
src/jobs_tracker/render/templates/: email.html
src/jobs_tracker/util/: history.py  http.py  logging.py
tests/: test_core.py
